# bitbizaar

./: .gitignore  README.md
bitbizaar/: Cargo.toml  README.md  Trunk.toml  index.html  main.js  package-lock.json  package.json  prestart.js  rsw.toml  server.js  styles.css  vite.config.js
bitbizaar/db/: init.js
bitbizaar/js/: node-globals.js
bitbizaar/js/modules/orbitdb-core/: index.js  index.js.map
bitbizaar/src/: app.rs  context_provider.rs  lib.rs  node-globals.js  pages.rs
bitbizaar/src-tauri/: Cargo.toml  tauri.conf.json
bitbizaar/src/modules/orbitdb-core/: index.js  index.js.map
bitbizaar/src/pages/: create_account.rs  home.rs  login.rs  mod.rs  router.rs  trending.rs
bitbizaar/src/scripts/: cashtags.rs  context_provider.rs  hashtags.rs  mod.rs
bitbizaar/wallets/: Cargo.toml
bitbizaar/wallets/src/: zcash.rs
website/: Dockerfile
