[package]
name = "wallets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bitcoin = "0.31.0"
ethereum = "0.15.0"
ethereum-types = "0.14.1"
ethsign = "0.9.0"
hex = "0.4.3"
monero = "0.19.0"
orchard = "0.6.0"
rand = "0.8.5"
secp256k1 = { version = "0.28.0", features = ["rand"] }
serde = { version = "1.0.162", features = ["derive"] }
sha3 = "0.10.8"
zcash_address = "0.3.0"
zcash_primitives = "0.13.0"